--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 {
     "BOT": {
-        "TOKEN": "your_token_here",
+        "TOKEN": "MzU2Mjg0OTM2Mjc5MjkzOTY0.DJZIYQ.U1MwsKQzFGMjcFzNao79vt_tmxs",
         "PREFIX": "s."
     },
-    "FIRST": true
+    "FIRST": false
 }
