--- a/data/config.json
+++ b/data/config.json
@@ -1,6 +1,6 @@
 {
     "BOT": {
-        "TOKEN": "MzU2Mjg0OTM2Mjc5MjkzOTY0.DJZIYQ.U1MwsKQzFGMjcFzNao79vt_tmxs",
+        "TOKEN": "MzU2NTUyMDgxMTgxNTA3NTg0.DJdAtA.qHugABU4NquQOJVMH99BORzhYOI",
         "PREFIX": "s."
     },
     "FIRST": false
